@@ -30,10 +30,17 @@
 			document.INIFORM.INIPAGE.value="SWITCHES";
 			document.INIFORM.QUERY.value='CHANGEDISABLE';
 			document.INIFORM.FIELD.value=field;
-			if(checked)	
-				document.INIFORM.VALUE.value='';
-			else	
-				document.INIFORM.VALUE.value='on';
+			if(field == 'MISC')
+			{
+				document.INIFORM.VALUE.value=checked;
+			}
+			else
+			{
+				if(checked)	
+					document.INIFORM.VALUE.value='';
+				else
+					document.INIFORM.VALUE.value='on';
+			}
 			document.INIFORM.submit();
 		}
 		function Debug(checked,field)
@@ -1514,7 +1521,7 @@
 		<TR>
 		<TD ALIGN=LEFT VALIGN=TOP COLSPAN=4><FONT COLOR=WHITE>Miscellaneous</FONT>
 		<TEXTAREA NAME=MISCDISABLE ID=MISCDISABLE ROWS=2 COLS=80>@ControlPanel?QUERY=DISABLE&FIELD=MISC@</TEXTAREA>
-		<INPUT TYPE=BUTTON NAME=APPLY VALUE=Apply ID=APPLY ONCLICK="Disable(this.value,this.name);">
+		<INPUT TYPE=BUTTON NAME=APPLY VALUE=Apply ID=APPLY ONCLICK="Disable(document.INIFORM.MISCDISABLE.value,'MISC');">
 		</TD>
 		</TR>
 		</TABLE>
